2025-01-18  Andreas Scherer  <https://ascherer.github.io>

	* pdftex.web: Purge backslash from |maxdimen|.

2025-01-17  Max Chernoff  <tex@maxchernoff.ca>

	* pdftex.web (Glob..., Set init...): new global
	resolution_ratio==226.
	(scale_image): use it to report a warning for too-small resolutions
	(e.g., 1px x 1px). https://tex.stackexchange.com/questions/734919

2024-08-04  Thanh Han The  <hanthethanh@gmail.com>

	* pdftoepdf.cc (write_epdf): reversed sep and pdfkeyprefix.

2024-07-26  Andreas Scherer  <https://ascherer.github.io>

	* pdftex.ch: Prepare for compilation with gcc-14.

2024-05-24  Thanh Han The  <hanthethanh@gmail.com>

	* pdftex.web (pdf_ptex_use_underscore_code),
	(pdf_ptex_use_underscore): new \pdfptexuseunderscore parameter.
	(Put each ...): define it.
	(print_param): print it.
	(get_ptex_use_underscore): new fn to implement it.
	(pdf_print_info): adjust Fullbanner prefix character.
	* pdftoepdf.cc (getptexuseunderscore): declare fn.
	(write_epdf): use it for FileName, PageNumber, InfoDict.

2024-04-18  Thanh Han The  <hanthethanh@gmail.com>

	* pdftex.web (pdf_begin_string): increase tolerance for finding
	interword spaces by 1pt, since overfull lines can have smaller
	spaces than space-space_shrink. Report from Ulrike,
	https://tug.org/pipermail/pdftex/2024-April/009388.html

2024-03-10  Karl Berry  <karl@tug.org>

	* TL'24 release.

2024-02-04  Karl Berry  <karl@tug.org>

        * NEWS,
        * pdftex_version.h,
        * pdftex.web (pdftex_revision, pdftex_version_string):
        version [1.40.]26 for TL24.

2024-01-14  Thanh Han The  <hanthethanh@gmail.com>

	* pdftoepdf.cc (write_epdf): call writeRefs at the end, to write
	all indirect objects after writing everything else.
	From pdftex r916 (and test in r915). Original report:
	https://bugs.ghostscript.com/show_bug.cgi?id=706940

2023-12-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test:
	Avoid errors on parallel test processing.
